--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
      <button id="randomize-btn">Randomize Color</button>
      <script src="script.js"></script>
     
+      <!-- Header Toolbar -->
+    <header id="toolbar">
+        <button id="randomize-btn">Randomize Color</button>
+    </header>
     
 </body>
 </html>
